# Python-homework-6

./: README.md  main.py  pyproject.toml  script.cmd
report_manager/base/: base_writer.py
report_manager/writers/: __init__.py  pdf_writer.py
src/python_homework_6/: main.py
src/python_homework_6/report_manager/: __init__.py  report_manager.py
src/python_homework_6/report_manager/base/: __init__.py  base_writer.py
src/python_homework_6/report_manager/writers/: __init__.py  csv_writer.py  docx_writer.py  json_writer.py  pdf_writer.py  xlsx_writer.py
